--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tone-synth",
+  "homepage": "http://justinkahrs.github.io/tone-synth",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +11,14 @@
     "tone": "^0.12.80"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "start": "react-scripts start",
+    "test": "react-scripts test --env=jsdom"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
